# Vespertine

./: .gitignore  Cargo.toml  Makefile  README.md  limine.conf
.cargo/: config.toml
kernel/: .rustfmt.toml  Cargo.toml
kernel/deprecated/: demo.rs  flags.rs  freelist.rs  pit.rs
kernel/src/: main.rs  panic.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: cpuid.rs  io.rs  mod.rs
kernel/src/boot/: mod.rs  smp.rs
kernel/src/core/: mod.rs  shell.rs
kernel/src/core/acpi/: fadt.rs  hpet.rs  madt.rs  mod.rs  rsdp.rs  sdt.rs
kernel/src/core/asynchronous/: mod.rs
kernel/src/core/cpu/: mod.rs
kernel/src/core/object/: handle.rs  invoke.rs  mod.rs  obj.rs  vfs.rs
kernel/src/core/program/: mod.rs  parser.rs
kernel/src/core/sync/: condvar.rs  lock.rs  mod.rs  mutex.rs  once.rs  rwlock.rs  semaphore.rs
kernel/src/core/thread/: dispatch.rs  idle.rs  mod.rs  priority.rs  reap.rs  schedule.rs  tcb.rs  wait.rs  workqueue.rs
kernel/src/core/time/: callout.rs  clock.rs  datetime.rs  mod.rs
kernel/src/drivers/: graphics.rs  logger.rs  mod.rs  serial.rs  tar.rs
kernel/src/drivers/keyboard/: mod.rs  scancodes.rs
kernel/src/drivers/logger/: logbuffer.rs  mod.rs
kernel/src/drivers/pci/: config.rs  enumerate.rs  mod.rs
kernel/src/memory/: bootalloc.rs  heap.rs  init_pmm.rs  magazine.rs  mod.rs  paging.rs  pmm.rs  vmm.rs  vmo.rs
kernel/src/syscall/: mod.rs
kernel/src/tasks/: initialization.rs  mod.rs  vfs_init.rs
kernel/src/tests/: memory_tests.rs  mod.rs  object_tests.rs  smp_tests.rs
kernel/src/util/: mod.rs  msr.rs  queue.rs  scheduling.rs
(+219 files in other folders)
